--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,26 @@
       <ul class="nav nav-tabs">
         <li><%= link_to "Blocipedia", root_path %></li>
         <li><%= link_to "About", about_path %></li>
+        <% if current_user && current_user.premium? %>
+          <li><%= link_to "Downgrade", new_charge_path %></li>
+        <% elsif current_user && current_user.member? %>
+          <li><%= link_to "Upgrade", new_charge_path %></li>
+        <% end %>
+
 
         <div id="user_control">
           <p class="navbar-text navbar-right">
           <% if user_signed_in? %>
-            Signed in as: <strong><%= current_user.email %></strong> |
-            <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+            <% if current_user.premium? %>
+              Signed in as: <strong><%= current_user.email %></strong><span class="badge"><Premium</span>&emsp;
+
+            <% else %>
+              Signed in as: <strong><%= current_user.email %></strong>&emsp;
+            <% end %>
+
+            <%= link_to "Edit profile", edit_user_registration_path, :class => 'navbar-link' %>
+            <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+
           <% else %>
             <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
             <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
@@ -34,6 +48,12 @@
         </div>
     <% elsif flash[:alert] %>
       <div class="alert alert-danger">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <%= flash[:alert] %>
+      </div>
+
+    <% elsif flash[:alert] %>
+      <div class="alert alert-warning">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <%= flash[:alert] %>
       </div>
