--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,53 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+
+ #user_control {
+   margin: 0;
+   padding: 0;
+ }
+
+ #user_control p {
+   margin: 0;
+   padding: 10px;
+ }
+
+ .m-lr-5 {
+   margin: 0 5%;
+ }
+
+ .card {
+   box-sizing: border-box;
+   display: block;
+   height: 300px;
+   width: 30%;
+   min-width: 200px;
+
+   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+   transition: 0.3s;
+   border-radius: 5px;
+
+ }
+
+ .card:hover {
+   background-color: rgba(34, 78, 60, 0.25);
+   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
+ }
+
+ .card .container {
+   padding: 2px 16px;
+ }
+
+ .mono {
+   font-family: monospace;
+ }
+
+ .card img {
+   display: block;
+   padding: 1em;
+   box-sizing: border-box;
+   height: 100%;
+   max-height: 240px;
+   margin: 0 auto;
+ }
