--- a/app/views/wikis/_wiki_entry.html.erb
+++ b/app/views/wikis/_wiki_entry.html.erb
@@ -1,3 +1,4 @@
+<% if canSee(current_user, wiki_entry) %>
 <div class="media">
   <div class="media-body">
     <h4 class="media-heading">
@@ -8,3 +9,4 @@
     </small>
   </div>
 </div>
+<% end %>
