--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -15,3 +15,7 @@
     <%= render partial: 'form', locals: { wiki: @wiki } %>
   </div>
 </div>
+
+<div>
+  <%= render partial: 'collaborators/collaborator_form', locals: { wiki: @wiki } %>
+</div>  
