--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -2,9 +2,11 @@
   <h1>
     <%= @wiki.title %>&emsp;<% if @wiki.private %><span class="badge">Private</span><%end%> <br>
     <small>
-      Created <%= time_ago_in_words(@wiki.created_at) %>.
-      <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success btn-small' %>
-      <%= link_to "Delete", @wiki, method: :delete, class: 'btn btn-danger btn-small', data: {confirm: "Are you sure you want to PERMANENTLY delete this Wiki?"} %>
+      Created <%= time_ago_in_words(@wiki.created_at) %> ago.
+      <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success btn-sm' %>
+      <% if policy(@wiki).destroy? %>
+      <%= link_to "Delete", @wiki, method: :delete, class: 'btn btn-danger btn-sm', data: {confirm: "Are you sure you want to PERMANENTLY delete this Wiki?"} %>
+      <% end %>
     </small>
   </h1>
 </div>
